# avant-window-navigator

./: ChangeLog  Makefile  Makefile.am  Makefile.in  ProjectHome.md  README  TODO  aclocal.m4  awn.pc  config.h  config.status  configure  configure.in  intltool-update  libtool  template.po
applets/: Makefile.am  taskman.desktop
applets/notification-area/: Makefile.am  applet.c  eggtraymanager.c
applets/separator/: applet.c
applets/switcher/: applet.c
applets/trash/: applet.c  trash.desktop  trashapplet.c  trashapplet.h
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
avant-applets/: avant-applets.glade  avant-applets.in.py
avant-launchers/: avant-launchers.in.py
avant-preferences/: Makefile  Makefile.am  Makefile.in  avant-preferences.in.py  avant-preferences.py  window.glade  window.glade.h
awn-applet-activation/: awn-plug.c  awn-plug.h
data/: Makefile  Makefile.am  Makefile.in  avant-window-navigator.schemas  avant-window-navigator.schemas.in.in
data/active/: Makefile  Makefile.in
libawn/: Makefile.am  awn-applet.c  awn-applet.h  awn-defines.h
plugins/Rhythmbox/: README
plugins/Rhythmbox/artdisplay-awn/: __init__.py
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  cs.po  da.po  de_DE.po  el_GR.po  en_GB.po  es.po  fi_FI.po  fr_FR.po  it_IT.po  no_NO.po  pt_BR.po  ru.po  sv.po
src/: Makefile  Makefile.am  Makefile.in  awn-app.c  awn-applet-manager-dbus.xml  awn-applet-manager.c  awn-applet-manager.h  awn-applet-proxy.h  awn-bar.c  awn-bar.h  awn-dbus.xml  awn-gconf.c  awn-gconf.h  awn-hotspot.c  awn-task-manager.c  awn-task-manager.h  awn-task.c  awn-task.h  awn-title.c  awn-utils.c  awn-utils.h  awn-win-manager.c  awn-window.c  awn-window.h  awn-x.c  awn-x.h  inlinepixbufs.h  main.c  test.c  xutils.c  xutils.h
src/test/: icon-test.c
trunk/avant-window-navigator/: AUTHORS  Makefile  Makefile.am  config.h  config.status  configure  configure.in  intltool-update  libtool
trunk/avant-window-navigator/autom4te.cache/: output.2  output.3  requests  traces.2  traces.3
trunk/avant-window-navigator/data/: Makefile  Makefile.am  Makefile.in  affinity.schemas.in.in
trunk/avant-window-navigator/po/: Makefile  Makefile.in
trunk/avant-window-navigator/src/: Makefile  Makefile.am  Makefile.in  awn-app.c  awn-app.h  awn-bar.c  awn-gconf.c  awn-gconf.h  awn-title.h  awn-win-manager.c  awn-win-manager.h  main.c
trunk/avant-window-navigator/src/.deps/: awn-app.Po  awn-bar.Po  awn-gconf.Po  awn-title.Po  awn-widget.Po  awn-win-manager.Po  awn-window.Po  main.Po
trunk/avant-window-navigator/src/test/: awn-icon.c  awn-icon.h  cairo-test  cairo-test.c  test-ng  test.c  test.h  testmain.c  wintest  wintest.c
web/launchers/: launchers.avi
